gobmkida/c3/sgfAddChild
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/sgfAddChild/src/sgf/sgfnode.c:1157:12: error: expected expression
*( _OWORD *)&result->child = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/sgfAddChild/src/sgf/sgfnode.c:1157:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->child = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/sgfAddChild/src/sgf/sgfnode.c:1158:12: error: expected expression
*( _OWORD *)&result->props = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/sgfAddChild/src/sgf/sgfnode.c:1158:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->props = 0LL; 
   ^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/sgfAddChild/src/obj/4/sgfnode.o] Error 1
